# pvr.ctciptv

./: CMakeLists.txt  README.md
pvr.ctciptv/: addon.xml.in
src/: PVRCTCIPTV.cpp  PVRCTCIPTV.h  client.cpp  client.h
